# xss-cookie-receiver

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  fly.toml  pyproject.toml
app/: api.py  config.py  database.py
