[tool.poetry]
name = "xss-cookie-receiver"
version = "0.1.0"
description = "Cross site scripting data receiver"
authors = ["Gabriel Radzki <gabriel.radzki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
pydantic = "^2.10.4"
gunicorn = "^23.0.0"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.36"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
